# ClaudeSync

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
rust/: Cargo.toml  README.md
rust/examples/: mock_server.rs
rust/src/: chat_sync.rs  compression.rs  config.rs  error.rs  keyring_store.rs  lib.rs  main.rs  provider.rs  session_key.rs  sync.rs  utils.rs
rust/src/cli/: auth.rs  chat.rs  config_cmd.rs  mod.rs  organization.rs  project.rs  push.rs  schedule.rs  session.rs  submodule.rs
rust/tests/: cli_happy_path.rs  mock_api.rs
rust/tests/common/: mod.rs
src/ctxsync/: chat_sync.py  provider_factory.py  session_key_manager.py  syncmanager.py  utils.py
src/ctxsync/cli/: auth.py  config.py  main.py  organization.py  project.py  submodule.py  sync.py
src/ctxsync/configmanager/: file_config_manager.py  inmemory_config_manager.py
src/ctxsync/providers/: base_provider.py
swift/: .gitignore  Package.swift  README.md  make-app.sh
swift/Sources/ClaudeSyncBar/: App.swift  Config.swift  FSWatcher.swift  FileScanner.swift  IgnoreMatcher.swift  KeychainStore.swift  MenuView.swift  SettingsView.swift  SyncController.swift  SyncEngine.swift
swift/Sources/CtxSyncBar/: App.swift  ClaudeClient.swift  Config.swift  FSWatcher.swift  FileScanner.swift  KeychainStore.swift  MenuView.swift  SettingsView.swift  SyncController.swift
tests/: test_chat_happy_path.py  test_claude_ai.py  test_happy_path.py  test_session_key_manager.py
