[package]
name = "claudesync"
version = "0.7.6"
edition = "2021"
description = "Synchronize local files with Claude.ai projects (Rust port of ClaudeSync)"
license = "MIT"

[lib]
name = "claudesync"
path = "src/lib.rs"

[[bin]]
name = "claudesync"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
ureq = { version = "2", features = ["gzip", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
md5 = "0.7"
regex = "1"
ignore = "0.4"
walkdir = "2"
indicatif = "0.17"
dialoguer = "0.11"
thiserror = "1"
fernet = "0.2"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
pbkdf2 = "0.12"
sha2 = "0.10"
base64 = "0.22"
flate2 = "1"
brotli = "7"
bzip2 = { version = "0.5", features = ["libbz2-rs-sys"] }
lzma-rs = "0.3"
dirs = "5"
filetime = "0.2"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
